Fixed center alignment

--- a/confetti-calculator/styles.css
+++ b/confetti-calculator/styles.css
@@ -1,5 +1,8 @@
 body {
-    width: 50%;
+    display: flex;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
     margin: 0 auto;
     background-image: linear-gradient(to bottom right, red, yellow);
     background-repeat: no-repeat;
@@ -12,15 +15,13 @@ h1 {
     font-family: sans-serif;
     font-weight: bold;
     font-size: 30px;
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 10 auto;
     max-width: 500px;
 }
 
 .display {
     background-color: rgb(65, 65, 65);
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 0 auto;
     justify-content: flex-end;
     align-items: flex-end;
     display: flex;
@@ -29,16 +30,15 @@ h1 {
     font-size: 30px;
     height: 100px;
     border-radius: 5px;
-    max-width: 500px;
+    width: 90%;
 }
 
 .buttons {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
-    max-width: 500px;
+    width: 90%;
 }
 
 .double-button {
